# vessel

./: .gitignore  CMakeLists.txt  README.md  main.cc.bak  out  run.sh
cmake/: ExternalProjects.cmake
include/snapshot/: snapshot.h  snapshot_registry.h
include/util/: ScopeTime.h  config.h  file.h  gid.h  log.h  memory.h  serialize.h
include/wasmx/: WAMRWasmModule.h  WamrManager.h  WasmModule.h  struct.h  testUDF.h
src/: CMakeLists.txt  main.cc
src/snapshot/: CMakeLists.txt  snapshot.cc  snapshot_registry.cc
src/util/: CMakeLists.txt  config.cc  file.cc  gid.cc  log.cc  memory.cc
src/wasmx/: CMakeLists.txt  WAMRWasmModule.cc  WamrManager.cc  WasmModule.cc  testData.proto  testUDF.cc  testp.pb.cc  testp.pb.h  testp.proto
tests/: CMakeLists.txt
tests/cpubench_test/: CMakeLists.txt  main.cc
tests/module_test/: CMakeLists.txt  main.cc
tests/thread_test/: CMakeLists.txt  main.cc
tests/uapbench_test/: CMakeLists.txt  main.cc
tests/wasmx_test/: CMakeLists.txt  main.cc  testData.pb.cc  testData.pb.h
wasm-app/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  cmake_install.cmake  main.cc  prepare.sh  testData.pb-c.cc  testData.pb-c.h  test_snapshot.cc  testapp copy.cc  testapp.cc
wasm-app/test_mmap/: CMakeLists.txt  main  main.c  tempCodeRunnerFile
wasm-app/test_open/: CMakeLists.txt  a.txt  main  main.c
wasm-app/test_snapshot/: CMakeLists.txt  test_snapshot.cc
wasm-app/testc/: CMakeLists.txt  main.c
